--- a/system/templates/tsa_viewer.html
+++ b/system/templates/tsa_viewer.html
@@ -12,47 +12,104 @@ Twitter Sentiment Analysis: Viewer
             <a class="nav-link" href="/tsa_introduction">Introduction</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/tsa_builder">Model Builder</a>
+            <a class="nav-link" href="/tsa_builder">Model Builder</a>   
         </li>
         <li class="nav-item" >
-            <a class="nav-link active " href="/tsa_viewer" style="background-color:rgb(19, 128, 92);">Viewer</a>
+            <a class="nav-link active " href="/tsa_viewer" style="background-color:rgb(19, 128, 92);">Mood Indicator Testing</a>
         </li>
     </ul>
 </nav>
 
 <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-5">
-    <h3><strong>Twitter Data Sentiment Analysis Project Introduction</strong></h3>
+    <h3><strong>🔬 Mood Indicator Testing</strong></h3>
+    <br>
+    <p align = 'left' style="color: black;">
+        This tab is for you to plot different mood indiators, as well as MSFT stock price. The indicators are built from 
+        tweets in the <strong> Model Bulder </strong> tab. 
+        <i style="color: red;">  (❗️Therefore, you should first build the model 
+        in the previous tab and then this tab can be available.) </i>
+        When you are ready to go, you can select any two curves you want and have them plotted 
+        together to show the pattern. The output area (with orange background-color) will tell you 
+        the correlation coefficient value between the two curves.
+        <br>
+         <strong style="color: blue;"> Sounds interesting? Just choose two curves below and 
+            have a try !😜  </strong> 
+    </p>
     <br>
     <div class="form-group">
-        <form action="/tsa_builder" id="Builder" method="post">
-            <p style = "width:500px;" align="right">
-                <b>1. Default stock price: Latest stock price of APPLE</b>
+        <form action="/tsa_viewer" id="Viewer" method="post">
+            <p align = 'left' style="color: red;">
+                ⭕️ Just <b>1</b> Step: Choose two curves (indicators) : 
             </p>
-            <p style = "width:500px;"  align="right">Spot Price:
-                <input id="spot" name="spot" placeholder="(int) spot price" value="1" type="text"/>
+            <p align = 'left'> 
+                Right now we support a dozen of curves to be plotted. Their name and meannings are illustrated 
+                below. 
             </p>
+            <p align = 'left'>
+                <strong> &nbsp &nbsp &nbsp &nbsp ◾️ Likes :</strong> 
+                Daily total tweets Likes👍 number about 'MSFT'
+                <br>
+                <strong> &nbsp &nbsp &nbsp &nbsp ◾️ RetweetCount :</strong> 
+                Daily total tweets Retweet🔁 number about 'MSFT'
+                <br>
+                <strong> &nbsp &nbsp &nbsp &nbsp ◾️ QuoteCount :</strong> 
+                Daily total tweets Quote🔗 number about 'MSFT'
+                <br>        
+                <strong> &nbsp &nbsp &nbsp &nbsp ◾️ MSFT_Adj_Close :</strong> 
+                Microsoft adjusted close stock price. 
+                <br>
+                <strong> &nbsp &nbsp &nbsp &nbsp ◾️ pos :</strong> 
+                Positive mood indecator
+                <br>
+                <strong> &nbsp &nbsp &nbsp &nbsp ◾️ neg :</strong> 
+                Negative mood indecator
+                <br>
+                <strong> &nbsp &nbsp &nbsp &nbsp ◾️ compound :</strong> 
+                Coumpounding score of positivity and negativity score. (Sigmoid function of pos and neg)
+                <br>
+                <strong> &nbsp &nbsp &nbsp &nbsp ◾️ pos/neg :</strong> 
+                Positive mood indiators divided by negative mood indicator 
+                <br>
+                <strong> &nbsp &nbsp &nbsp &nbsp ◾️ neg/pos :</strong> 
+                The reverse of (pos/neg)
+                <br>
+                <strong> &nbsp &nbsp &nbsp &nbsp ◾️ EMA(pos/neg) :</strong> 
+                Exponential moving average of (pos/neg)
+                <br>
+                <strong> &nbsp &nbsp &nbsp &nbsp ◾️ EMA(pos/neg) :</strong> 
+                Exponential moving average of (neg/pos) 
+                
+            </p>
+            
+            <hr>
+            
             <p style = "width:500px;" align="right" style = "width:300px; background-color: rgb(201, 215, 223); color: rgb(0, 2, 4);">Choose first curve: 
-                <select name = "pulldownlist" action = '/' style = "width:200px;">
+                <select name = "curve1" action = '/' style = "width:200px;">
                     {%for curve in pdlist_curve1 %}
-                        <option value = {{curve}} selected>{{curve}}</option>>
+                        <option value = {{curve}}>{{curve}}</option>
                     {% endfor %}
                 </select>
             </p>
             <p style = "width:500px;" align="right" style = "width:300px; background-color: rgb(201, 215, 223); color: rgb(0, 2, 4);">Choose second curve: 
-                <select name = "pulldownlist" action = '/' style = "width:200px;">
+                <select name = "curve2" action = '/' style = "width:200px;">
                     {%for curve in pdlist_curve2 %}
-                        <option value = {{curve}} selected>{{curve}}</option>>
+                        <option value = {{curve}}>{{curve}}</option>
                     {% endfor %}
                 </select>
             </p>
-            <p style = "width:600px;" align="right">
-                Spot Price + 1 = {{spot}}
+            <p style = "width:500px; background-color: bisque;" align="right">
+                The curve chosen: <strong style="color: red;">{{curve1_name}}</strong> vs <strong style="color: red;">{{curve2_name}}</strong>
+                <br>
+                <strong> Pearson Correlation = {{coeff_pr_corr}}, p-val = {{coeff_pr_pval}} </strong> 
+                <br>
+                <strong> Spearman Correlation = {{coeff_sp_corr}} , p-val = {{coeff_sp_pval}}</strong> 
             </p>
+            
             <input type="submit" value="Plot" style="width:200px; background-color: rgb(9, 140, 176); color: aliceblue; " />
         </form>
     </div>
     <h3>Graph</h3>
-        <img src="/plot/tsa_plot_demo" alt="Image Placeholder" width="50%">
+        <img src="/plot/tsa_plot_lab" alt="Image Placeholder" width="140%">
     <hr>
 </main>
 <br></br>
