--- a/system/templates/fixed_income_saved_info.html
+++ b/system/templates/fixed_income_saved_info.html
@@ -9,13 +9,13 @@ fixed_income_saved_info
             <a class="nav-link " href="/fixed_income_trading">Introduction</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active " href="/fixed_income_trading_new">Search Bond</a>
+            <a class="nav-link " href="/fixed_income_trading_new">Search Bond</a>
         </li>
         <li class="nav-item">
             <a class="nav-link " href="/fixed_income_ptfl">Build Portfolio</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link " href="/fixed_income_saved">Saved Securities</a>
+            <a class="nav-link active " href="/fixed_income_saved">Saved Securities</a>
         </li>
         <li class="nav-item">
             <a class="nav-link " href="/fixed_income_yield_curve">Yield Change Simulator</a>
