--- a/system/templates/fixed_income_yield_curve_sim.html
+++ b/system/templates/fixed_income_yield_curve_sim.html
@@ -37,7 +37,7 @@ fixed_income_yield_change_setup
             <p></p>
             <p>On Security:</p>
 
-            <select id="alias" name="alias">
+            <select id="alias" name="alias" style="width: 800px;">
                 <option value="">--choose a saved bond--</option>
                 {% for bond in res %}
                 <option value="{{bond['alias']}}">{{bond['alias']}}({{bond['symbol']}})</option>
@@ -47,7 +47,7 @@ fixed_income_yield_change_setup
             <p></p>
             <p>OR</p>
 
-            <select id="alias_ptfl" name="alias_ptfl">
+            <select id="alias_ptfl" name="alias_ptfl" style="width: 800px;">
                 <option value="">--choose a saved portfolio--</option>
                 {% for ptfl in res_ptfl %}
                 <option value="{{ptfl['alias']}}">{{ptfl['alias']}}({{ptfl['mb']}}+{{ptfl['hb1']}}+{{ptfl['hb2']}})</option>
