Remove special char in Twitter Sentiment Analysis #229

--- a/system/templates/tsa_introduction.html
+++ b/system/templates/tsa_introduction.html
@@ -21,7 +21,7 @@ Twitter Sentiment Analysis: Introduction
 </nav>
 
 <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-5">
-    <h3><strong> 💬 Twitter Data Sentiment Analysis Project</strong></h3>
+    <h3><strong>Twitter Data Sentiment Analysis Project</strong></h3>
     <br>
     <div align="center">
         <table cellspacing="0" cellpadding="0" border="0" style="font-family:Georgia, Garamond, Serif;">
